# verbose-sniffle-py

./: .gitignore  LICENSE  README.md  docker-compose.yaml  dockerfile  log-config.yaml  pyproject.toml
tests/api/v1/: status.py
tests/core/: __init__.py
verbose_sniffle_py/: app.py  dependencies.py  openapi.py  settings.py
verbose_sniffle_py/api/v1/: __init__.py  status.py
verbose_sniffle_py/core/: enum.py  logging.py
verbose_sniffle_py/models/v1/: status.py
vspy/: app.py  openapi.py  settings.py
vspy/api/v1/: __init__.py
vspy/core/: enum.py  logging.py
vspy/crud/v1/: __init__.py
vspy/models/v1/: __init__.py
vspy/schemas/v1/: __init__.py
