[tool.poetry]
name = "verbose-sniffle-py"
version = "0.1.0"
description = ""
authors = ["10352022+GerhardOfRivia@users.noreply.github.com"]
readme = "README.md"
packages = [{include = "verbose_sniffle_py"}]

[tool.poetry.dependencies]
python = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
